vlib/v/checker/tests/option_map_or_unwrap_ptr_source_err.out
vlib/v/checker/tests/option_map_or_unwrap_ptr_source_err.vv:13:9: error: cannot copy map: call `move` or `clone` method (or use a reference)
   11 |     // immutable reference parameter: `x` aliases the caller's map, which the
   12 |     // caller can still mutate.
   13 |     x := p.translations or { panic('missing') }
      |            ~~~~~~~~~~~~
   14 |     return x
   15 | }
vlib/v/checker/tests/option_map_or_unwrap_ptr_source_err.vv:26:9: error: cannot copy map: call `move` or `clone` method (or use a reference)
   24 |     // aliases `c.translations`, which is mutated afterwards through `c`.
   25 |     p := &c
   26 |     a := p.translations or { panic('missing') }
      |            ~~~~~~~~~~~~
   27 |     c.translations?['x'] = 2
   28 |
vlib/v/checker/tests/option_map_or_unwrap_ptr_source_err.vv:31:14: error: cannot copy map: call `move` or `clone` method (or use a reference)
   29 |     // pointer as an array element receiver.
   30 |     arr := [&c]
   31 |     b := arr[0].translations or { panic('missing') }
      |                 ~~~~~~~~~~~~
   32 | 
   33 |     println(a)
