vlib/v/checker/tests/option_map_or_unwrap_ptr_source_err.vv
// An immutable pointer/reference can still alias storage that its owner mutates
// later, so or-unwrapping an option map through a pointer root (or a selector
// receiver whose type is a pointer) must keep the map-copy guard, even though the
// pointer binding itself is immutable. See vlang/v issue #27867.
struct Category {
mut:
	translations ?map[string]int
}

fn through_ref_param(p &Category) map[string]int {
	// immutable reference parameter: `x` aliases the caller's map, which the
	// caller can still mutate.
	x := p.translations or { panic('missing') }
	return x
}

fn main() {
	mut c := Category{
		translations: {
			'x': 1
		}
	}
	// immutable pointer to mutable data (the exact case from the review): `a`
	// aliases `c.translations`, which is mutated afterwards through `c`.
	p := &c
	a := p.translations or { panic('missing') }
	c.translations?['x'] = 2

	// pointer as an array element receiver.
	arr := [&c]
	b := arr[0].translations or { panic('missing') }

	println(a)
	println(b)
	println(through_ref_param(&c))
}
